--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -43,9 +43,26 @@ footer.rodape
 section.itens-rodape
 div.esquerdo 
 div.imagens
-div.redes-sociais{
+div.redes-sociais {
   display: flex;
   justify-content: space-between;
+}
+
+footer.rodape
+section.itens-rodape
+div.esquerdo 
+div.imagens
+div.redes-sociais
+svg:hover path {
+  fill: var(--lime-green);
+}
+
+footer.rodape
+section.itens-rodape
+div.esquerdo 
+div.imagens
+div.redes-sociais {
+  cursor: pointer;
 }
 
 footer.rodape
@@ -60,11 +77,24 @@ div.mais-informacoes
 a.link {
   font-family: 'Public Sans', sans-serif;
   color: var(--white);
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 400;
   text-decoration: none;
+  transition: all .3s;
 }
 
+footer.rodape
+section.itens-rodape
+div.esquerdo 
+div.sobre 
+a.link:hover,
+footer.rodape
+section.itens-rodape
+div.esquerdo 
+div.mais-informacoes
+a.link:hover {
+  color: var(--lime-green);
+}
 footer.rodape
 section.itens-rodape
 div.direito {
