--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -33,4 +33,10 @@ button.request {
   font-size: 1.4rem;
   font-weight: 700;
   padding: 1.2rem 3.2rem;
+  transition: all .3s;
+}
+
+button.request:hover {
+  background: linear-gradient(69deg, hsla(136, 65%, 51%, 0.6) 16.62%, hsla(192, 70%, 51%, 0.6) 85.61%);
+  cursor: pointer;
 }
