--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,214 +3,19 @@ main {
   overflow: hidden;
 }
 
-main img.mockups {
+main 
+img.mockups-desktop {
   width: 64.6rem;
   position: absolute;
   top: -10rem;
   right: -11rem;
 }
 
-section.introducao {
-  background: var(--very-light-gray);
-  min-height: calc(100vh - 105px);
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-}
-
-section.introducao
-img.bg-intro {
-  position: absolute;
-  width: 85rem;
-  left: 65rem;
-  top: -16.8rem;
-}
-
-section.introducao 
-div.apresentacao {
-  width: 35rem;
-}
-
-section.introducao 
-div.apresentacao 
-h1.titulo-principal {
-  color: var(--dark-blue);
-  font-size: 3.6rem;
-  font-weight: 400;
-}
-
-section.introducao 
-div.apresentacao
-p.paragrafo {
-  color: var(--grayish-blue);
-  font-size: 1.6rem;
-  font-weight: 500;
-  line-height: 2.2rem;
-  margin: 2.4rem 0;
-}
-
-section.beneficios {
-  min-height: calc(100vh - 3.2rem);
-  background: var(--light-grayish);
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-section.beneficios 
-div.texto {
-  padding-top: 5.8rem;
-  width: 100%;
-}
-
-section.beneficios 
-div.texto
-h2.titulo {
-  color: var(--dark-blue);
-  font-size: 3.6rem;
-  font-weight: 400;
-}
-
-section.beneficios 
-div.texto
-p.paragrafo {
-  color: var(--grayish-blue);
-  font-size: 1.6rem;
-  font-weight: 500;
-  width: 59rem;
-  line-height: 2.2rem;
-  margin-top: 2.4rem;
-}
-
-section.beneficios
-div.card-beneficios {
-  display: flex;
-  justify-content: space-between;
-}
-
-section.beneficios
-div.card-beneficios
-div.beneficio {
-  display: flex;
-  flex-direction: column;
-  width: 20%;
-}
-
-section.beneficios
-div.card-beneficios
-div.beneficio 
-img.icone {
-  width: 6.4rem;
-}
-
-section.beneficios
-div.card-beneficios
-div.beneficio 
-h3.titulo {
-  color: var(--dark-blue);
-  font-size: 1.8rem;
-  font-weight: 400;
-  padding: 2.4rem 0;
-} 
-
-section.beneficios
-div.card-beneficios
-div.beneficio
-p.paragrafo {
-  color: var(--grayish-blue);
-  font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 1.8rem;
-}
-
-section.ultimos-artigos {
-  min-height: 100vh;
-  background: var(--very-light-gray);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  flex-direction: column;
-}
-
-section.ultimos-artigos
-h2.titulo-section {
-  color: var(--dark-blue);
-  font-size: 3.6rem;
-  font-weight: 300;
-}
-
-section.ultimos-artigos
-div.artigos {
-  display: flex;
-  justify-content: space-between;
-  max-width: 100%;
-}
-
-section.ultimos-artigos
-div.artigos
-div.artigo {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  max-width: 23%;
-  background: var(--white);
-  border-radius: .8rem;
-}
-
-section.ultimos-artigos
-div.artigos
-div.artigo
-div.texto {
-  padding: 1.6rem;
-}
-
-section.ultimos-artigos
-div.artigos
-div.artigo
-img.banner {
-  height: 14.8rem;
-}
-
-section.ultimos-artigos
-div.artigos
-div.artigo
-div.texto
-span.autor {
-  color: var(--grayish-blue);
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-section.ultimos-artigos
-div.artigos
-div.artigo
-div.texto
-h3.titulo {
-  color: var(--dark-blue);
-  font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 1.8rem;
-  margin: 1.2rem 0;
-  transition: all .3s;
-}
-
-section.ultimos-artigos
-div.artigos
-div.artigo
-div.texto
-h3.titulo:hover {
-  color: var(--lime-green);
-  cursor: pointer;
-}
-
-section.ultimos-artigos
-div.artigos
-div.artigo
-div.texto
-p.introducao {
-  color: var(--grayish-blue);
-  font-size: 1.2rem;
-  font-weight: 400;
-  line-height: 1.8rem;
+@media screen and (max-width: 425px) {
+  main 
+  img.mockups-desktop {
+    top: -14rem;
+    width: 38rem;
+    right: 2rem;
+  }
 }
